# qt-client

./: CMakeLists.txt  README.md  main.cpp
doc/: loginwindow.md  main_window.md  net_config.md  session_window.md  tcp_network.md  websocket文档.md  客户端改造总结.md  通信格式制定.md
resources/: resources.qrc
src/auth/: registerutils.cpp  registerutils.h
src/config/: config.h
src/conversation/: conversationlistmanager.cpp  conversationlistmanager.h
src/friend/: friendlistmanager.cpp  friendlistmanager.h
src/network/: authapiclient.cpp  authapiclient.h  networkclient.cpp  networkclient.h  profileapiclient.cpp  profileapiclient.h  protocol.cpp  protocol.h  websocketclient.cpp  websocketclient.h
src/session/: session.cpp  session.h  usersession.cpp  usersession.h
src/ui/friend/: addfrienddialog.cpp  addfrienddialog.h  creategroupdialog.cpp  creategroupdialog.h  deletefrienddialog.cpp  deletefrienddialog.h  searchgroupdialog.cpp  searchgroupdialog.h
src/ui/login/: loginwindow.cpp  loginwindow.h  loginwindow.ui
src/ui/main/: widget.cpp  widget.h
src/ui/register/: registerwindow.cpp  registerwindow.h  registerwindow.ui
src/ui/session/: sessionwindow.cpp  sessionwindow.h
src/ui/settings/: settingswindow.cpp  settingswindow.h
src/ui/test/: logwindow.cpp  logwindow.h
test/: registerutils_test.cpp
